수정함:        aicoin_main.py 	수정함:        main.ui 	수정함:        upbitApi.py

--- a/main.ui
+++ b/main.ui
@@ -54,6 +54,9 @@
          <height>16777215</height>
         </size>
        </property>
+       <attribute name="verticalHeaderVisible">
+        <bool>false</bool>
+       </attribute>
        <column>
         <property name="text">
          <string>Name</string>
@@ -117,7 +120,7 @@
             </size>
            </property>
            <property name="currentIndex">
-            <number>0</number>
+            <number>1</number>
            </property>
            <widget class="QWidget" name="tab_3">
             <attribute name="title">
@@ -1037,6 +1040,9 @@
              <height>16777215</height>
             </size>
            </property>
+           <attribute name="verticalHeaderVisible">
+            <bool>false</bool>
+           </attribute>
            <column>
             <property name="text">
              <string>Name</string>
@@ -1089,6 +1095,9 @@
              <height>16777215</height>
             </size>
            </property>
+           <attribute name="verticalHeaderVisible">
+            <bool>false</bool>
+           </attribute>
            <column>
             <property name="text">
              <string>주문</string>
