--- a/main1.ui
+++ b/main1.ui
@@ -57,6 +57,11 @@
           <bold>true</bold>
          </font>
         </property>
+        <column>
+         <property name="text">
+          <string notr="true">1</string>
+         </property>
+        </column>
        </widget>
       </item>
       <item>
@@ -286,7 +291,7 @@
              </font>
             </property>
             <property name="currentIndex">
-             <number>1</number>
+             <number>0</number>
             </property>
             <widget class="QWidget" name="tab_3">
              <attribute name="title">
@@ -431,6 +436,41 @@
                   </property>
                  </widget>
                 </item>
+                <item>
+                 <widget class="QComboBox" name="comboBox_buyratio_1">
+                  <property name="minimumSize">
+                   <size>
+                    <width>50</width>
+                    <height>30</height>
+                   </size>
+                  </property>
+                  <property name="maximumSize">
+                   <size>
+                    <width>50</width>
+                    <height>30</height>
+                   </size>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QLabel" name="label_2">
+                  <property name="minimumSize">
+                   <size>
+                    <width>20</width>
+                    <height>30</height>
+                   </size>
+                  </property>
+                  <property name="maximumSize">
+                   <size>
+                    <width>20</width>
+                    <height>30</height>
+                   </size>
+                  </property>
+                  <property name="text">
+                   <string>%</string>
+                  </property>
+                 </widget>
+                </item>
                </layout>
               </item>
               <item>
@@ -510,43 +550,17 @@
                   </property>
                  </widget>
                 </item>
-               </layout>
-              </item>
-              <item>
-               <layout class="QHBoxLayout" name="horizontalLayout_9">
-                <item>
-                 <widget class="QLabel" name="label_8">
-                  <property name="minimumSize">
-                   <size>
-                    <width>80</width>
-                    <height>30</height>
-                   </size>
-                  </property>
-                  <property name="maximumSize">
-                   <size>
-                    <width>80</width>
-                    <height>30</height>
-                   </size>
-                  </property>
-                  <property name="text">
-                   <string>현재가 대비</string>
-                  </property>
-                  <property name="alignment">
-                   <set>Qt::AlignJustify|Qt::AlignVCenter</set>
-                  </property>
-                 </widget>
-                </item>
                 <item>
                  <widget class="QComboBox" name="comboBox_buyratio">
                   <property name="minimumSize">
                    <size>
-                    <width>200</width>
+                    <width>50</width>
                     <height>30</height>
                    </size>
                   </property>
                   <property name="maximumSize">
                    <size>
-                    <width>200</width>
+                    <width>50</width>
                     <height>30</height>
                    </size>
                   </property>
@@ -568,19 +582,19 @@
                  <widget class="QLabel" name="label_11">
                   <property name="minimumSize">
                    <size>
-                    <width>40</width>
+                    <width>20</width>
                     <height>30</height>
                    </size>
                   </property>
                   <property name="maximumSize">
                    <size>
-                    <width>40</width>
+                    <width>20</width>
                     <height>30</height>
                    </size>
                   </property>
                   <property name="font">
                    <font>
-                    <family>Arial</family>
+                    <family>Arial Black</family>
                     <pointsize>8</pointsize>
                    </font>
                   </property>
@@ -647,13 +661,13 @@
                  <widget class="QLabel" name="label_10">
                   <property name="minimumSize">
                    <size>
-                    <width>40</width>
+                    <width>130</width>
                     <height>30</height>
                    </size>
                   </property>
                   <property name="maximumSize">
                    <size>
-                    <width>40</width>
+                    <width>130</width>
                     <height>30</height>
                    </size>
                   </property>
@@ -860,6 +874,41 @@
                   </property>
                  </widget>
                 </item>
+                <item>
+                 <widget class="QComboBox" name="comboBox_sellratio_1">
+                  <property name="minimumSize">
+                   <size>
+                    <width>50</width>
+                    <height>30</height>
+                   </size>
+                  </property>
+                  <property name="maximumSize">
+                   <size>
+                    <width>50</width>
+                    <height>30</height>
+                   </size>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QLabel" name="label">
+                  <property name="minimumSize">
+                   <size>
+                    <width>20</width>
+                    <height>30</height>
+                   </size>
+                  </property>
+                  <property name="maximumSize">
+                   <size>
+                    <width>20</width>
+                    <height>30</height>
+                   </size>
+                  </property>
+                  <property name="text">
+                   <string>%</string>
+                  </property>
+                 </widget>
+                </item>
                </layout>
               </item>
               <item>
@@ -939,40 +988,17 @@
                   </property>
                  </widget>
                 </item>
-               </layout>
-              </item>
-              <item>
-               <layout class="QHBoxLayout" name="horizontalLayout_14">
-                <item>
-                 <widget class="QLabel" name="label_18">
-                  <property name="minimumSize">
-                   <size>
-                    <width>80</width>
-                    <height>30</height>
-                   </size>
-                  </property>
-                  <property name="maximumSize">
-                   <size>
-                    <width>80</width>
-                    <height>30</height>
-                   </size>
-                  </property>
-                  <property name="text">
-                   <string>현재가 대비</string>
-                  </property>
-                 </widget>
-                </item>
                 <item>
                  <widget class="QComboBox" name="comboBox_sellratio">
                   <property name="minimumSize">
                    <size>
-                    <width>200</width>
+                    <width>50</width>
                     <height>30</height>
                    </size>
                   </property>
                   <property name="maximumSize">
                    <size>
-                    <width>200</width>
+                    <width>50</width>
                     <height>30</height>
                    </size>
                   </property>
@@ -991,19 +1017,19 @@
                  <widget class="QLabel" name="label_12">
                   <property name="minimumSize">
                    <size>
-                    <width>40</width>
+                    <width>20</width>
                     <height>30</height>
                    </size>
                   </property>
                   <property name="maximumSize">
                    <size>
-                    <width>30</width>
+                    <width>20</width>
                     <height>30</height>
                    </size>
                   </property>
                   <property name="font">
                    <font>
-                    <family>Arial</family>
+                    <family>Arial Black</family>
                     <pointsize>8</pointsize>
                    </font>
                   </property>
@@ -1073,13 +1099,13 @@
                  <widget class="QLabel" name="label_20">
                   <property name="minimumSize">
                    <size>
-                    <width>40</width>
+                    <width>130</width>
                     <height>30</height>
                    </size>
                   </property>
                   <property name="maximumSize">
                    <size>
-                    <width>30</width>
+                    <width>130</width>
                     <height>30</height>
                    </size>
                   </property>
@@ -1273,12 +1299,12 @@
             <property name="minimumSize">
              <size>
               <width>400</width>
-              <height>0</height>
+              <height>200</height>
              </size>
             </property>
             <property name="maximumSize">
              <size>
-              <width>16777215</width>
+              <width>500</width>
               <height>16777215</height>
              </size>
             </property>
